Oweek Stuff and countdown

--- a/index.html
+++ b/index.html
@@ -50,17 +50,28 @@
                         <div class="dropdown-item"><a href="./team">Executives</a></div>
                         <div class="dropdown-item"><a href="./commissioner#council">Council Members</a></div>
                         <div class="dropdown-item"><a href="./commissioner#commissioner">Commissioners</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="./commissioner#committee">Committee Members</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="./commissioner#committee">Committee
+                                Members</a></div>
                     </div>
                 </li>
                 <li id="menu-admin">
                     <a href="./admin" class="menu-top-item">Admin</a>
                     <div class="menu-dropdown" id="admin-dropdown">
-                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Council Resources</a></div>
-                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Exec Updates</a></div>
-                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Finances</a></div>
-                        <div class="dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Governing Docs</a></div>
-                        <div class="dropdown-item menu-bottom-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">SRA</a></div>
+                        <div class="dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Council
+                                Resources</a></div>
+                        <div class="dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Exec
+                                Updates</a></div>
+                        <div class="dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Finances</a>
+                        </div>
+                        <div class="dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Governing
+                                Docs</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">SRA</a>
+                        </div>
                 </li>
                 <li id="menu-store">
                     <a href="./store" class="menu-top-item">Eng Merch</a>
@@ -73,7 +84,9 @@
                 <li id="menu-coop">
                     <a href="./coop" class="menu-top-item">Co-op</a>
                     <div class="menu-dropdown" id="coop-dropdown">
-                        <div class="dropdown-item menu-bottom-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Academic Resources</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Academic
+                                Resources</a></div>
                     </div>
                 </li>
                 <li id="menu-campaign">
@@ -123,18 +136,29 @@
                     <div class="mobile-menu-dropdown">
                         <div class="mobile-dropdown-item"><a href="./team">Executives</a></div>
                         <div class="mobile-dropdown-item"><a href="./team">Council Members</a></div>
-                        <div class="mobile-dropdown-item"><a href="./team#commissioner">Commissioners & Directors</a></div>
+                        <div class="mobile-dropdown-item"><a href="./team#commissioner">Commissioners & Directors</a>
+                        </div>
                         <div class="mobile-dropdown-item"><a href="./team#committee">Committee Members</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Admin</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Council Resources</a></div>
-                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Exec Updates</a></div>
-                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Finances</a></div>
-                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Governing Docs</a></div>
-                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">SRA</a></div>
+                        <div class="mobile-dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Council
+                                Resources</a></div>
+                        <div class="mobile-dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Exec
+                                Updates</a></div>
+                        <div class="mobile-dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Finances</a>
+                        </div>
+                        <div class="mobile-dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Governing
+                                Docs</a></div>
+                        <div class="mobile-dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">SRA</a>
+                        </div>
                 </li>
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Eng Merch</a>
@@ -147,7 +171,9 @@
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Co-op</a>
                     <div class="mobile-menu-dropdown">
-                        <div class="mobile-dropdown-item"><a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Academic Resources</a></div>
+                        <div class="mobile-dropdown-item"><a
+                                href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Academic
+                                Resources</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
@@ -171,9 +197,8 @@
         <div class="close" onclick="fadeOut(alert1)"></div>
     </div>
 
-    <!-- CAROUSEL -->
+    <!-- REGULAR CAROUSEL -->
     <div class="main-carousel">
-
         <div class="slide slide1" id="slide1">
             <div class="slide-background1">
                 <div class="slide-text">
@@ -225,6 +250,29 @@
             <div class="carousel-circle" id="circle3"></div>
         </div>
 
+    </div>
+
+    <!-- OWEEK PROMO -->
+    <!-- <div class="oweek-container">
+        <div class="title">OWeek</div>
+        <div class="oweek-intro">Get ready for the most exciting week of the year, and the beginning of a new chapter in
+            your life! At Western Engineering, we love to celebrate with style.
+        </div>
+        <video class="oweek-video" controls>
+            <source src="./videos/oweek2020.mp4" type="video/mp4">
+        </video>
+    </div> -->
+
+    <div class="countdown-container">
+        <div class="title" id="headline">Countdown to OWeek</div>
+        <div id="countdown">
+            <ul>
+                <li><span id="days"></span>Days</li>
+                <li><span id="hours"></span>Hours</li>
+                <li><span id="minutes"></span>Minutes</li>
+                <li><span id="seconds"></span>Seconds</li>
+            </ul>
+        </div>
     </div>
 
     <hr class="line-break">
