--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                     <a class="mobile-menu-top-item">Team</a>
                     <div class="mobile-menu-dropdown">
                         <div class="mobile-dropdown-item"><a href="./team">Executives</a></div>
-                        <div class="mobile-dropdown-item"><a href="./team">Council Members</a></div>
-                        <div class="mobile-dropdown-item"><a href="./team#commissioner">Commissioners & Directors</a>
+                        <div class="mobile-dropdown-item"><a href="./commissioner#council">Council Members</a></div>
+                        <div class="mobile-dropdown-item"><a href="./comissioner#commissioner">Commissioners & Directors</a>
                         </div>
-                        <div class="mobile-dropdown-item"><a href="./team#committee">Committee Members</a></div>
+                        <div class="mobile-dropdown-item"><a href="./commissioner#committee">Committee Members</a></div>
                     </div>
                 </li>
                 <li class="mobile-menu-item">
