--- a/commissioner.html
+++ b/commissioner.html
@@ -157,62 +157,55 @@
         </ol>
     </div>
 
-    
     <!-- COUNCIL TEAM -->
     <div class="title team-title" id="council">2021-2022 Council</div><br>
     <div class="council-container">
         <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
-            <div class="council-name">Name Name</div>
-            <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-photo" style="background-image: url(./img/team/Jack\ Peplinski.png);"></div>
+            <div class="council-name">Jack Peplinski</div>
+            <div class="council-position">USC Counselor</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
     </div>
 
     <!-- YEAR REPS -->
-    <div class="title team-title" id="yearrep">Year Reps</div><br>
+    <div class="title team-title" id="yearrep">Year Reps - Coming Soon</div><br>
     <div class="council-container">
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
-        </div>
-        <div class="council-card">
-            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
-            <div class="council-name">Name Name</div>
-            <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
     </div>
 
@@ -223,31 +216,31 @@
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
     </div>
 
@@ -258,31 +251,31 @@
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
         <div class="council-card">
             <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
             <div class="council-name">Name Name</div>
             <div class="council-position">Position</div>
-            <div class="council-description">Blah</div>
+            <div class="council-description">Description</div>
         </div>
     </div>
     
