--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <div class="menu-dropdown" id="council-dropdown">
                         <div class="dropdown-item"><a href="./team">Executives</a></div>
                         <div class="dropdown-item"><a href="./commissioner#council">Council Members</a></div>
+                        <div class="dropdown-item"><a href="./commissioner#yearrep">Year Reps</a></div>
                         <div class="dropdown-item"><a href="./commissioner#commissioner">Commissioners</a></div>
                         <div class="dropdown-item menu-bottom-item"><a href="./commissioner#committee">Committee
                                 Members</a></div>
@@ -136,8 +137,8 @@
                     <div class="mobile-menu-dropdown">
                         <div class="mobile-dropdown-item"><a href="./team">Executives</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#council">Council Members</a></div>
-                        <div class="mobile-dropdown-item"><a href="./comissioner#commissioner">Commissioners & Directors</a>
-                        </div>
+                        <div class="mobile-dropdown-item"><a href="./comissioner#yearrep">Year Reps</a></div>
+                        <div class="mobile-dropdown-item"><a href="./comissioner#commissioner">Commissioners & Directors</a></div>
                         <div class="mobile-dropdown-item"><a href="./commissioner#committee">Committee Members</a></div>
                     </div>
                 </li>
