exec photos update

--- a/team.html
+++ b/team.html
@@ -169,13 +169,13 @@
     <div class="title team-title" id="exec">2021 Executive Team</div><br>
     <div class="team-container">
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">President</div>
                 <div class="exec-name">Chris Mohan</div>
                 <div class="exec-description">
                     <p>
-                        <strong>About Me:</strong>
+                        <strong>About Me:</strong><br>
                         I’m in my fourth year of Software Engineering and iVeY. When I’m not studying/chilling in the
                         UES Lounge, I’m usually at the Spoke (my order is ham & swiss on asiago sourdough). On Wednesday
                         nights you will (almost certainly) find me at the Spoke singing along to the one and only Rick
@@ -191,13 +191,13 @@
         </div>
 
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Academic</div>
                 <div class="exec-name">Jennifer Villeneuve</div>
                 <div class="exec-description">
                     <p>
-                        <strong>About Me:</strong>
+                        <strong>About Me:</strong><br>
                         Hey all you cool cats and kittens, my name is Jennifer Villeneuve (most people just call me Jenn) and I am your VP Academic this year. I am in third year Mechatronic Systems and Biomed, and a major dog lover. If I am not drowning in schoolwork, you will find me either at the Rec Centre lifting heavy things, Ceeps showing off my mad dance skills or hanging out in the UES lounge. I am super excited for this upcoming school year to finally spend a Wednesday night with Rick Mcghie as well as attending Eng goes to Ceeps for the first time. Can’t wait to meet you all, feel free to follow me on instagram @jennvilleneuve_ if you want to chat :)
 
                     </p>
@@ -205,13 +205,13 @@
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Communications</div>
                 <div class="exec-name">Aaron Moses</div>
                 <div class="exec-description">
                     <p>
-                        <strong>About Me:</strong>
+                        <strong>About Me:</strong><br>
                         Hello! My name is Aaron Moses and I am soooo excited to be your VP Communications this year! Being the VP Comms means I get to show off all the cool stuff the UES does. To keep up to date make sure to follow UES platforms on instagram @westernues, facebook and our new discord server! I’m going into my third year of Software Engineering and absolutely love food. I’m still building my list of favourite places in London so if you have any recommendations or questions about anything at all shoot me a message on instagram @aaron.mos8.
 
                     </p>
@@ -219,60 +219,52 @@
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/Marcus\ tm.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP External</div>
                 <div class="exec-name">Marcus Tuen Muk</div>
                 <div class="exec-description">
                     <p>
-                        <strong>About Me:</strong>
+                        <strong>About Me:</strong><br>
                         Hey! I’m Marcus Tuen Muk, your 2021-2022 VP External. As VP External, I organize the delegation of students that goes to all the fantastic engineering conferences throughout the year. Also, I help plan the Western Engineering Competition and help connect students with people from other engineering societies. I’m in my second year of Software and love anime, gaming, and singing. I’m always down to talk about anime, manga, video games, or just some random things. If you have any questions or want to chat, message me on Instagram @PikaKight!
                     </p>
                 </div>
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/Julia\ Collins.jpeg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Finance & Admin</div>
                 <div class="exec-name">Julia Collins</div>
                 <div class="exec-description">
                     <p>
-                        <strong>About Me:</strong>
+                        <strong>About Me:</strong><br>
                         Hey! I’m Julia Collins and I am your 2021-2022 VP Finance & Administration. This fancy title basically just means that I’m the one who signs the cheques and oversees the UES Lounge/merch. I am in my third year of Mechatronics (catch me in class with Jenn and Sneha) and am planning doing an international co-op next year. I love a good cappuccino so you’re most likely to run into me at DaVinci’s Cafe or the Black Walnut on Richmond. If you ever want to go for a skate at the Rec Centre or a bike ride through Gibbon’s I’m your girl, just shoot me a message on instagram @27.julia or find me hiding out in ACEB.
                     </p>
                 </div>
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-photo" style="background-image: url(./img/team/Sneha\ Patel.JPG)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Internal</div>
-                <div class="exec-name">Chris Mohan</div>
+                <div class="exec-name">Sneha Patel</div>
                 <div class="exec-description">
                     <p>
-                        <strong>About Me:</strong>
-                        I’m in my fourth year of Software Engineering and iVeY. When I’m not studying/chilling in the
-                        UES Lounge, I’m usually at the Spoke (my order is ham & swiss on asiago sourdough). On Wednesday
-                        nights you will (almost certainly) find me at the Spoke singing along to the one and only Rick
-                        McGhie. I love the Spoke- did I mention that (@thewaveandspoke pls sponsor me)
-
-                        For the newcomers, welcome to the family- and to everyone else, welcome back! I can assure you
-                        this is going to be an exciting year for engineering and I hope to meet you all soon (hopefully
-                        in-person!) Feel free to reach out to me on instagram (@christophermohan) or via email
-                        (ues.prez@uwo.ca)
+                        <strong>About Me:</strong><br>
+                        No submission
                     </p>
                 </div>
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/team/Jack\ Peplinski.png)"></div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-text">
                 <div class="exec-position">VP Social</div>
                 <div class="exec-name">Catriona Chan</div>
                 <div class="exec-description">
                     <p>
-                        <strong>About Me:</strong>
+                        <strong>About Me:</strong><br>
                         Hi!!! My name is Catriona Chan and I’m psyched to be your VP Social this year! I plan fun eng events to help you meet new peeps and de-stress including Formal, Charity on the Rocks, and Western Engineering Week. I’m in my second year of Software and a HUGE foodie. You can always find me on food adventures around London and Toronto, especially ones on tiktok! I'm super excited to meet you all (crossing my fingers that it's in person) and if you ever want someone to chat with feel free to dm me on instagram @catriona.chan!!
                     </p>
                 </div>
